# SieveAI

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.py  sieveai.requirements.txt
sieveai/: __init__.py  cli.py
sieveai/exe/: AnnapuRNA.py  ExecutableBase.py  Vina.py  VinaBase.py  __init__.py
sieveai/lib/: ChimeraX.py  LibManager.py  MolConverter.py  OpenBabel.py  __init__.py
sieveai/process/: Docking.py  ProcessBase.py  Rescoring.py  __init__.py
